--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
     "dev:full": "concurrently \"npm run dev\" \"npm run server\""
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "localforage": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "localforage": "^1.10.0",
-    "zustand": "^4.4.7",
-    "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
+    "concurrently": "^8.2.2",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8",
-    "concurrently": "^8.2.2"
+    "vite": "^7.1.12"
   }
 }
